configuring mapping and adding migrations

--- a/src/AICBank.API/appsettings.json
+++ b/src/AICBank.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AICBankDbConnString" : "Server=localhost;Database=aicbankdb;User=root;Password=senha123;SslMode=none;"
+  }
 }
