--- a/src/AICBank.API/appsettings.json
+++ b/src/AICBank.API/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "AICBankDbConnString" : "Server=localhost;Database=aicbankdb;User=root;Password=senha123;SslMode=none;"
-  }
+  },
+  "JWT" : {
+    "Audience" : "aicbank.com.br",
+    "Issuer" : "aicbank.com.br",
+    "SecretKey" : "AICBankMinha$Chave#Super!Secreta@2024",
+    "TokenValidityInMinutes": 60
+  } 
 }
