--- a/src/AICBank.API/appsettings.json
+++ b/src/AICBank.API/appsettings.json
@@ -5,14 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "AICBankDbConnString" : "Server=localhost;Database=aicbankdb;User=root;Password=senha123;SslMode=none;"
-  },
-  "JWT" : {
-    "Audience" : "aicbank.com.br",
-    "Issuer" : "aicbank.com.br",
-    "SecretKey" : "AICBankMinha$Chave#Super!Secreta@2024",
-    "TokenValidityInMinutes": 60
-  } 
+  "AllowedHosts": "*"
 }
