--- a/src/AICBank.API/appsettings.json
+++ b/src/AICBank.API/appsettings.json
@@ -5,5 +5,20 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Serilog": {
+    "Using": ["Serilog.Sinks.Grafana.Loki"],
+    "MinimumLevel": {
+      "Default": "Debug"
+    },
+    "WriteTo":[{
+      "Name": "GrafanaLoki",
+      "Args": {
+        "uri": "http://localhost:3100",
+        "labels":[
+          {"key": "app", "value":"aicbank_api"}
+        ]
+      }
+    }]
+  }
 }
