--- a/src/AICBank.Core/AICBank.Core.csproj
+++ b/src/AICBank.Core/AICBank.Core.csproj
@@ -9,8 +9,10 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="FluentValidation" Version="11.9.2" />
+    <PackageReference Include="MailKit" Version="4.8.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+    <PackageReference Include="MimeKit" Version="4.8.0" />
   </ItemGroup>
 
 </Project>
