--- a/src/AICBank.API/appsettings.json
+++ b/src/AICBank.API/appsettings.json
@@ -20,5 +20,25 @@
         ]
       }
     }]
+  },
+  "CelCash":{
+    "galaxId": "",
+    "galaxHash": "",
+    "baseUrl": ""
+  },
+  "ConnectionStrings": {
+    "AICBankDbConnString": ""
+  },
+  "JWT": {
+    "TokenValidityInMinutes": 0,
+    "SecretKey": "",
+    "Issuer": "",
+    "Audience": ""
+  },
+  "Email": {
+    "Smtp": "",
+    "Port": 0,
+    "User": "",
+    "Password": ""
   }
 }
