--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,6 +42,7 @@ steps:
   - task: FileTransform@2
     displayName: 'Transformar appsettings.json'
     inputs:
+      enableXmlTransform: false
       folderPath: '$(System.DefaultWorkingDirectory)'
       jsonTargetFiles: '**/appsettings.json'
     
