--- a/src/AICBank.API/appsettings.json
+++ b/src/AICBank.API/appsettings.json
@@ -22,23 +22,23 @@
     }]
   },
   "CelCash":{
-    "galaxId": "",
-    "galaxHash": "",
-    "baseUrl": ""
+    "galaxId": "#{CelCash_galaxId}#",
+    "galaxHash": "#{CelCash_galaxHash}#",
+    "baseUrl": "#{CelCash_baseUrl}#"
   },
   "ConnectionStrings": {
-    "AICBankDbConnString": ""
+    "AICBankDbConnString": "#{ConnectionStrings_AICBankDbConnString}#"
   },
   "JWT": {
-    "TokenValidityInMinutes": 0,
-    "SecretKey": "",
-    "Issuer": "",
-    "Audience": ""
+    "TokenValidityInMinutes": "#{JWT_TokenValidityInMinutes}#",
+    "SecretKey": "#{JWT_SecretKey}#",
+    "Issuer": "#{JWT_Issuer}#",
+    "Audience": "#{JWT_Audience}#"
   },
   "Email": {
-    "Smtp": "",
-    "Port": 0,
-    "User": "",
-    "Password": ""
+    "Smtp": "#{Email_Smtp}#",
+    "Port": "#{Email_Port}#",
+    "User": "#{Email_User}#",
+    "Password": "#{Email_Password}#"
   }
 }
