--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,18 +6,18 @@ pool:
 
 variables:
   buildConfiguration: 'Release'
-  CelCash.galaxId: ${{ variables.CelCash_galaxId }}
-  CelCash.galaxHash: ${{ variables.CelCash_galaxHash }}
-  CelCash.baseUrl: ${{ variables.CelCash_baseUrl }}
-  JWT.TokenValidityInMinutes: ${{ variables.JWT_TokenValidityInMinutes }}
-  JWT.SecretKey: ${{ variables.JWT_SecretKey }}
-  JWT.Issuer: ${{ variables.JWT_Issuer }}
-  JWT.Audience: ${{ variables.JWT_Audience }}
-  ConnectionStrings.AICBankDbConnString: ${{ variables.ConnectionStrings_AICBankDbConnString }}
-  Email.Smtp: ${{ variables.Email_Smtp }}
-  Email.Port: ${{ variables.Email_Port }}
-  Email.User: ${{ variables.Email_User }}
-  Email.Password: ${{ variables.Email_Password }}
+  CelCash_galaxId: ${{ variables.CelCash_galaxId }}
+  CelCash_galaxHash: ${{ variables.CelCash_galaxHash }}
+  CelCash_baseUrl: ${{ variables.CelCash_baseUrl }}
+  JWT_TokenValidityInMinutes: ${{ variables.JWT_TokenValidityInMinutes }}
+  JWT_SecretKey: ${{ variables.JWT_SecretKey }}
+  JWT_Issuer: ${{ variables.JWT_Issuer }}
+  JWT_Audience: ${{ variables.JWT_Audience }}
+  ConnectionStrings_AICBankDbConnString: ${{ variables.ConnectionStrings_AICBankDbConnString }}
+  Email_Smtp: ${{ variables.Email_Smtp }}
+  Email_Port: ${{ variables.Email_Port }}
+  Email_User: ${{ variables.Email_User }}
+  Email_Password: ${{ variables.Email_Password }}
   API_PATH: "src/AICBank.API/"
 
 steps:
@@ -38,13 +38,12 @@ steps:
   - script: |
       dotnet publish $(API_PATH) --configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)
     displayName: 'Publish'
-    
-  - task: FileTransform@2
-    displayName: 'Transformar appsettings.json'
+      
+  # Substituir tokens no arquivo copiado
+  - task: qetza.replacetokens.replacetokens-task.replacetokens@3
+    displayName: 'Substituir Tokens no arquivo de build'
     inputs:
-      enableXmlTransform: false
-      folderPath: '$(System.DefaultWorkingDirectory)'
-      jsonTargetFiles: '**/appsettings.json'
+      targetFiles: '$(Build.ArtifactStagingDirectory)/appsettings.json'
     
   - task: PublishBuildArtifacts@1
     inputs:
