--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,18 +6,6 @@ pool:
 
 variables:
   buildConfiguration: 'Release'
-  CelCash_galaxId: ${{ variables.CelCash_galaxId }}
-  CelCash_galaxHash: ${{ variables.CelCash_galaxHash }}
-  CelCash_baseUrl: ${{ variables.CelCash_baseUrl }}
-  JWT_TokenValidityInMinutes: ${{ variables.JWT_TokenValidityInMinutes }}
-  JWT_SecretKey: ${{ variables.JWT_SecretKey }}
-  JWT_Issuer: ${{ variables.JWT_Issuer }}
-  JWT_Audience: ${{ variables.JWT_Audience }}
-  ConnectionStrings_AICBankDbConnString: ${{ variables.ConnectionStrings_AICBankDbConnString }}
-  Email_Smtp: ${{ variables.Email_Smtp }}
-  Email_Port: ${{ variables.Email_Port }}
-  Email_User: ${{ variables.Email_User }}
-  Email_Password: ${{ variables.Email_Password }}
   API_PATH: "src/AICBank.API/"
 
 steps:
@@ -58,11 +46,11 @@ steps:
       scp -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no -r $(Build.ArtifactStagingDirectory)/* root@207.244.247.46:/sistemas/aicbank/api
     displayName: 'Copiar arquivos para o VPS'
 
-  # - script: |
-  #     mkdir -p ~/.ssh
-  #     cp $(Agent.TempDirectory)/id_rsa ~/.ssh/id_rsa
-  #     chmod 600 ~/.ssh/id_rsa
-      
-  #     ssh -i ~/.ssh/id_rsa root@207.244.247.46
-  #     sudo systemctl restart sistema-agendamentos
-  #   displayName: 'Reiniciar o Serviço'
+  - script: |
+     mkdir -p ~/.ssh
+     cp $(Agent.TempDirectory)/id_rsa ~/.ssh/id_rsa
+     chmod 600 ~/.ssh/id_rsa
+    
+     ssh -i ~/.ssh/id_rsa root@207.244.247.46
+     sudo systemctl restart aicbank
+     displayName: 'Reiniciar o Serviço'
