--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,10 +47,19 @@ steps:
     displayName: 'Copiar arquivos para o VPS'
 
   - script: |
-     mkdir -p ~/.ssh
-     cp $(Agent.TempDirectory)/id_rsa ~/.ssh/id_rsa
-     chmod 600 ~/.ssh/id_rsa
-    
-     ssh -i ~/.ssh/id_rsa root@207.244.247.46
-     sudo systemctl restart aicbank
-     displayName: 'Reiniciar o Serviço'
+      mkdir -p ~/.ssh
+      cp $(Agent.TempDirectory)/id_rsa ~/.ssh/id_rsa
+      chmod 600 ~/.ssh/id_rsa
+
+      ssh -i ~/.ssh/id_rsa root@207.244.247.46
+      cp /sistemas/config/aicbank/appsettings.json /sistemas/aicbank/api/appsettings.json
+    displayName: 'Copiar Arquivos de configuração'
+
+  - script: |
+      mkdir -p ~/.ssh
+      cp $(Agent.TempDirectory)/id_rsa ~/.ssh/id_rsa
+      chmod 600 ~/.ssh/id_rsa
+      
+      ssh -i ~/.ssh/id_rsa root@207.244.247.46
+      sudo systemctl restart aicbank
+    displayName: 'Reiniciar o Serviço'
